<resources>
    <string name="app_name">Marko Idžan Official</string>
    <string name="personal_name">Marko Idžan</string>
    <string name="private_mail">marko.idzan@gmail.com</string>
    <string name="home">Dobrodošli!</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="plus_one">Google +</string>
    <string name="website">Web stranica</string>
    <string name="openDrawer">Otvori</string>
    <string name="closeDrawer">Zatvori</string>
    <string name="action_settings">Postavke</string>

</resources>
