<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pocetno"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/youtube"
            android:checked="false"
            android:icon="@drawable/youtube"
            android:title="@string/youtube"/>
        <item
            android:id="@+id/facebook"
            android:checked="false"
            android:icon="@drawable/facebook"
            android:title="@string/facebook"/>
        <item
            android:id="@+id/twitter"
            android:checked="false"
            android:icon="@drawable/twitter"
            android:title="@string/twitter"/>
        <item
            android:id="@+id/instagram"
            android:checked="false"
            android:icon="@drawable/camera"
            android:title="@string/instagram"/>
        <item
            android:id="@+id/website"
            android:checked="false"
            android:icon="@drawable/web"
            android:title="@string/website"/>
    </group>
</menu>